--- a/vue-jsclient/src/scss/_variables.scss
+++ b/vue-jsclient/src/scss/_variables.scss
@@ -18,7 +18,8 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
-$appName: 'worktest';
+$appName: 'finalf';
+$wokbenchHeight: 97vh;
 
 @import 'theme_main';
 //@import 'theme_green';
