--- a/vue-jsclient/src/scss/app.scss
+++ b/vue-jsclient/src/scss/app.scss
@@ -2,6 +2,7 @@
 
 // Variables
 @import 'variables';
+@import "tab";
 @import "toolbar";
 @import "textField";
 @import 'navbar';
@@ -16,9 +17,20 @@
 
 body, html {
 	font-family: Nunito, Tahoma, sans-serif;
-	font-size:12px;
+	font-size: 12px;
+    margin:0px;
+    //height: 100vh;
+    //width: 100vw;
+    // background: darkviolet;
+
 }
-.workbench{
-	padding-left: 3px;
-	padding-right: 3px;
+.ff-workbench{
+	//padding-left: 3px;
+	//padding-right: 3px;
+    //position: relative;
+    //z-index: -1;
+    // width: 100vh;
+    height: $wokbenchHeight;
+    background: #f6993f;
 }
+
