windows: grid parteneri

--- a/vue-jsclient/src/scss/app.scss
+++ b/vue-jsclient/src/scss/app.scss
@@ -31,6 +31,6 @@ body, html {
     //z-index: -1;
     // width: 100vh;
     height: $wokbenchHeight;
-    background: #f6993f;
+    background: $ff-background-color-wokbench;
 }
 
