--- a/vue-jsclient/src/scss/theme_main.scss
+++ b/vue-jsclient/src/scss/theme_main.scss
@@ -27,7 +27,8 @@ $ff-tab:(
 	hover-color:         $ff-hover-color,
 	background-color:    $ff-base,
 	font-color-selected: #000000,
-	font-size-tab:       12px
+	font-size-tab:       12px,
+    selected-color:     black
 );
 
 
