--- a/vue-jsclient/src/scss/form.scss
+++ b/vue-jsclient/src/scss/form.scss
@@ -107,3 +107,60 @@ $ff-caption-height: 20px;
 	}
 
 }
+
+
+// pentru formular in tab
+.ff-form-tab{
+    position: relative;
+    z-index: 100;
+    border: 1px solid darken(map-get($ff-modal-window, "caption-color"), 10%);
+    height: auto;
+    display: block;
+    background-color:	map-get($ff-modal-window, "background-color");
+
+    .form-header {
+        background-color: darken(map-get($ff-modal-window, "caption-color"), 10%);
+        height: $ff-caption-height;
+        cursor: move;
+
+        .caption {
+            float: left;
+            color: map-get($ff-modal-window, "caption-color-font");
+            display: inline-block;
+            padding-left: 10px;
+
+            // vertical center height
+            line-height: $ff-caption-height; vertical-align: middle;
+        }
+
+        .closeButton {
+            float: right;
+            color: map-get($ff-modal-window, "caption-color-font");
+            padding-right: 8px;
+            cursor:pointer;
+
+            // vertical center height
+            line-height: $ff-caption-height; vertical-align: middle;
+        }
+    }
+
+    .form-content{
+        padding: 5px;
+    }
+
+    .form-button{
+        width: 100%;
+        display: inline-block;
+        .buttons{
+            float: right;
+            padding: 10px;
+        }
+    }
+
+    .form-bottom-line {
+        background-color: darken(map-get($ff-modal-window, "caption-color"), 10%);
+        height: 6px;
+        float: bottom;
+    }
+
+}
