--- a/vue-jsclient/src/scss/grid.scss
+++ b/vue-jsclient/src/scss/grid.scss
@@ -15,7 +15,7 @@ $ff-caption-text-height: 22px;
 	.ff-grid-loading-modal {
 		display: inline-block;
 		position: absolute;
-		// z-index: 100;
+		z-index: 100;
 		top: 0;
 		left: 0;
 		width: 100%;
