--- a/vue-jsclient/src/scss/grid.scss
+++ b/vue-jsclient/src/scss/grid.scss
@@ -20,7 +20,7 @@ $ff-caption-text-height: 22px;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(179, 179, 179, 0.5);
+		// background-color: rgba(179, 179, 179, 0.5);
 		transition: opacity 0.3s ease;
 		text-align: center;
 		div{
@@ -80,6 +80,7 @@ $ff-caption-text-height: 22px;
 
 						.divCaptionFilter {
 							display: flex;                  /* establish flex container */
+                            align-items: center;
 
 							.divFilter{
 								padding-left: 5px;
