windows: tab on off

--- a/vue-jsclient/src/scss/theme_main.scss
+++ b/vue-jsclient/src/scss/theme_main.scss
@@ -28,7 +28,8 @@ $ff-tab:(
 	background-color:    $ff-base,
 	font-color-selected: #000000,
 	font-size-tab:       12px,
-    selected-color:     black
+    selected-color:     black,
+    disable-tab-color: lightgrey
 );
 
 
