--- a/vue-jsclient/src/scss/dropdown.scss
+++ b/vue-jsclient/src/scss/dropdown.scss
@@ -1,8 +1,29 @@
 .ff-dropdown-simple {
+
+    position: relative;
     border: 1px solid lighten( $ff-base, 30% );
     padding: 2px;
     border-radius: 4px;
     background: lighten( $ff-base, 50% );
+
+    .loading-modal {
+        display: block;
+        position: absolute;
+        z-index: 100;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: opacity 0.3s ease;
+        text-align: center;
+
+        div{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
 
     select {
 		background-color: map-get($ff-dropdown, "background-color");
