--- a/vue-jsclient/src/scss/form.scss
+++ b/vue-jsclient/src/scss/form.scss
@@ -112,11 +112,61 @@ $ff-caption-height: 20px;
 // pentru formular in tab
 .ff-form-tab{
     position: relative;
+    margin-top: 8px;
     z-index: 100;
-    border: 1px solid darken(map-get($ff-modal-window, "caption-color"), 10%);
+    // border: 1px solid darken(map-get($ff-modal-window, "caption-color"), 10%);
     height: auto;
     display: block;
     background-color:	map-get($ff-modal-window, "background-color");
+
+    .loading-modal {
+        display: block;
+        position: absolute;
+        z-index: 100;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: opacity 0.3s ease;
+        text-align: center;
+
+        div{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    .form-title{
+        .antet {
+            .buttons-container{
+                display: inline-flex;
+                .prime-button {
+                    margin-left: 12px;
+                }
+                .next-button {
+                    margin-left: 6px;
+                }
+
+                .last-button {
+                    margin-right: 6px;
+                }
+            }
+            .title{
+                display: inline-flex;
+                margin-left: 5px;
+                margin-bottom: 5px;
+                padding: 4px;
+                padding-right: 20px;
+                border: 1px solid lighten(map_get($ff-tab, 'background-color'), 30%);
+                box-shadow: 2px 2px 4px -4px darken($ff-base, 70%);
+                border-radius: 4px;
+                background-color: lighten(map_get($ff-tab, 'background-color'), 40%);
+            }
+
+        }
+    }
 
     .form-content{
         padding: 5px;
@@ -132,7 +182,10 @@ $ff-caption-height: 20px;
     }
 
     .form-bottom-line {
-        background-color: darken(map-get($ff-modal-window, "caption-color"), 10%);
+        // background-color: darken(map-get($ff-modal-window, "caption-color"), 10%);
+        background-color: map-get($ff-tab,"selected-color");
+
+
         height: 6px;
         float: bottom;
     }
