--- a/vue-jsclient/src/scss/tab.scss
+++ b/vue-jsclient/src/scss/tab.scss
@@ -76,16 +76,32 @@
             // width: 100px;
             //height: $wokbenchHeight;
 
-            .title-continut-tab {
-                display: inline-flex;
-                margin-left: 5px;
-                margin-bottom: 5px;
-                padding: 4px;
-                padding-right: 20px;
-                border: 1px solid lighten(map_get($ff-tab, 'background-color'), 30%);
-                box-shadow: 2px 2px 4px -4px darken($ff-base, 70%);
-                border-radius: 4px;
-                background-color: lighten(map_get($ff-tab, 'background-color'), 40%);
+            .antet-tab {
+                .buttons-container{
+                    display: inline-flex;
+                    .prime-button {
+                        margin-left: 12px;
+                    }
+                    .next-button {
+                        margin-left: 6px;
+                    }
+
+                    .last-button {
+                        margin-right: 6px;
+                    }
+                }
+                .title{
+                    display: inline-flex;
+                    margin-left: 5px;
+                    margin-bottom: 5px;
+                    padding: 4px;
+                    padding-right: 20px;
+                    border: 1px solid lighten(map_get($ff-tab, 'background-color'), 30%);
+                    box-shadow: 2px 2px 4px -4px darken($ff-base, 70%);
+                    border-radius: 4px;
+                    background-color: lighten(map_get($ff-tab, 'background-color'), 40%);
+                }
+
             }
         }
 
@@ -93,6 +109,10 @@
 }
 
 
+
+.selected-tab {
+    background: map-get($ff-tab,"selected-color") !important;
+}
 .disable-tab {
     background: map-get($ff-tab,"disable-tab-color") !important;
     pointer-events: none;
