--- a/vue-jsclient/src/scss/form.scss
+++ b/vue-jsclient/src/scss/form.scss
@@ -176,8 +176,9 @@ $ff-caption-height: 20px;
         width: 100%;
         display: inline-block;
         .buttons{
+            margin-right: 20px;
             float: right;
-            padding: 10px;
+            padding: 5px;
         }
     }
 
