--- a/vue-jsclient/src/scss/grid.scss
+++ b/vue-jsclient/src/scss/grid.scss
@@ -155,6 +155,11 @@ $ff-caption-text-height: 22px;
 								text-align: center;
 							}
 
+                            &--right-align {
+                                @extend .div;
+                                text-align: right;
+                            }
+
 							&--center-align-action-group {
 								// @extend .div;
 								text-align: center;
@@ -169,6 +174,21 @@ $ff-caption-text-height: 22px;
 									margin-left: 1%;
 								}
 							}
+
+                            // for class binding
+                                &RightAlign {
+                                    @extend .div;
+                                    text-align: right;
+                                }
+                                &LeftAlign {
+                                    @extend .div;
+                                    text-align: left;
+                                }
+                                &CenterAlign {
+                                    @extend .div;
+                                    text-align: center;
+                                }
+
 						}
 					}
 
