windows: lista woking progress

--- a/vue-jsclient/src/scss/lista.scss
+++ b/vue-jsclient/src/scss/lista.scss
@@ -37,6 +37,11 @@
 				            text-overflow: ellipsis;
 							padding: 2px;
 
+                            &CenterAlign {
+                                @extend .tdDiv;
+                                text-align: center;
+                            }
+
 			            }
 		            }
 	            }
