windows: lista and formular liste adrese partener

--- a/vue-jsclient/src/scss/app.scss
+++ b/vue-jsclient/src/scss/app.scss
@@ -14,7 +14,7 @@
 @import "windowsLogin";
 @import "grid";
 @import "lista";
-
+@import "checkbox";
 
 body, html {
 	font-family: Nunito, Tahoma, sans-serif;
