--- a/vue-jsclient/src/scss/lista.scss
+++ b/vue-jsclient/src/scss/lista.scss
@@ -3,6 +3,25 @@
 	    display: grid;
 	    // background: yellow;
 
+	    .loading-modal {
+		    display: inline-block;
+		    position: absolute;
+		    z-index: 100;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    // background-color: rgba(179, 179, 179, 0.5);
+		    transition: opacity 0.3s ease;
+		    text-align: center;
+		    div{
+			    position: absolute;
+			    top: 50%;
+			    left: 50%;
+			    transform: translate(-50%, -50%);
+		    }
+	    }
+
 
         .tableClass {
 	        border-collapse: collapse;
