--- a/vue-jsclient/src/scss/dropdown.scss
+++ b/vue-jsclient/src/scss/dropdown.scss
@@ -58,6 +58,25 @@ $zIndex-ff-dropdown-search: 100;
 
 	border-radius: 4px;
 
+	.loading-modal {
+		display: block;
+		position: absolute;
+		z-index: ($zIndex-ff-dropdown-search + 20) !important;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		transition: opacity 0.3s ease;
+		text-align: center;
+
+		div{
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+	}
+
 	input{
 		width: 100%;
 		border: none;
@@ -73,6 +92,8 @@ $zIndex-ff-dropdown-search: 100;
 		align-self: center;
 		width: auto;
 		height: auto;
+		margin-left: 2px;
+		margin-right: 4px;
 
 		//background: desaturate( $ff-base, 20% );
 		//background: $ff-background-color-control;
