windows: cont partner activate

--- a/vue-jsclient/src/scss/app.scss
+++ b/vue-jsclient/src/scss/app.scss
@@ -15,6 +15,7 @@
 @import "grid";
 @import "lista";
 @import "checkbox";
+@import "iban";
 
 body, html {
 	font-family: Nunito, Tahoma, sans-serif;
