--- a/vue-jsclient/src/scss/theme_main.scss
+++ b/vue-jsclient/src/scss/theme_main.scss
@@ -7,6 +7,7 @@ $ff-hover-color:                #474747;
 $ff-hover-color-font:           whitesmoke;
 $ff-color-disabled:             #4e4e4e;
 $ff-background-color-wokbench:  whitesmoke;
+$ff-disabled-background:        #cad4e6;
 
 $ff-button-font-size: 12px;
 $ff-button-font-color: whitesmoke;
