--- a/vue-jsclient/src/scss/form.scss
+++ b/vue-jsclient/src/scss/form.scss
@@ -78,7 +78,7 @@ $ff-caption-height: 20px;
 
 // tabela pentru aranjarea controalelor in formular
 .ff-form-table{
-	//border: 1px solid orangered;
+	// border: 1px solid orangered;
 	border-collapse: collapse;
 
 	.label-right{
@@ -103,8 +103,12 @@ $ff-caption-height: 20px;
     }
 
 	.control{
-		//border: 1px solid blue;
+        //border: 1px solid blue;
 	}
+
+    .controlRight{
+        text-align: right;
+    }
 
 }
 
