windows: tabela luni inchise, lista issues

--- a/vue-jsclient/src/scss/lista.scss
+++ b/vue-jsclient/src/scss/lista.scss
@@ -1,4 +1,7 @@
 .ff-lista {
+
+    width: fit-content;
+
     .container {
 	    display: grid;
 	    // background: yellow;
@@ -55,7 +58,8 @@
 				        // cursor: pointer;
 			        }
 		            .tdClass {
-			            .tdDiv{
+			            .tdDiv {
+                            // border: 1px solid blue;
 				            white-space: nowrap;
 				            overflow: hidden;
 				            text-overflow: ellipsis;
