ubuntu - formular luni inchise working

--- a/vue-jsclient/src/scss/lista.scss
+++ b/vue-jsclient/src/scss/lista.scss
@@ -3,7 +3,7 @@
     width: fit-content;
 
     .container {
-	    display: grid;
+	    // display: grid;
 	    // background: yellow;
 
 	    &:is(.with-dimension) {
