--- a/vue-jsclient/src/scss/form.scss
+++ b/vue-jsclient/src/scss/form.scss
@@ -174,6 +174,11 @@ $ff-caption-height: 20px;
 
     .form-content{
         padding: 5px;
+
+        .line {
+            border-top: 1px solid #78909c;
+            padding-bottom: 10px;
+        }
     }
 
     .form-button{
@@ -204,6 +209,54 @@ $ff-caption-height: 20px;
 
         height: 6px;
         float: bottom;
+    }
+
+}
+
+
+.ff-flex-form {
+    //background: #f6993f;
+    display: flex;
+    width: fit-content;
+    padding-bottom: 10px;
+
+    &-end-align {
+        @extend .ff-flex-form;
+        align-items: end;
+    }
+    &-center-align {
+        @extend .ff-flex-form;
+        align-items: center;
+    }
+
+    .item {
+        display: flex;
+        .label {
+            //background: #f6993f;
+            font-weight: bold;
+            padding-left: 5px;
+            padding-right: 7px;
+            padding-bottom: 2px;
+        }
+        .control{
+            //background: #e3342f;
+            padding-right: 10px;
+
+            .label-bold {
+                font-weight: bold;
+            }
+        }
+    }
+
+    .item-inline {
+        @extend .item;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .item-column {
+        @extend .item;
+        flex-direction: column;
     }
 
 }
