--- a/vue-jsclient/src/scss/popup.scss
+++ b/vue-jsclient/src/scss/popup.scss
@@ -1,3 +1,5 @@
+$ff-popup-caption-height: 20px;
+
 .ff-popup {
 	position: absolute;
 	z-index: 9998;
@@ -5,16 +7,15 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	//background-color: rgba(179, 179, 179, 0.5);
-	display: table;
-	//display: none;
+	background-color: rgba(179, 179, 179, 0.5);
+	//display: table;
+	display: none;
 	//display: inline-block;
 	transition: opacity 0.3s ease;
 
-	.container {
+	.ff-popup-container {
 		position: absolute;
-		width: 1100px;
-		height: 600px;
+		z-index: 99;
 		left: 50%;
 		top: 40%;
 		background: $ff-background-color-wokbench;
@@ -22,12 +23,30 @@
 		border-radius: 3px;
 		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
 
-		.title{}
-		.content{}
-		.button{}
+		.title {
+			background-color: darken(map-get($ff-modal-window, "caption-color"), 10%);
+			color: map-get($ff-modal-window, "caption-color-font");
+			height: $ff-popup-caption-height;
 
+			.caption {
+				display: inline;
+				padding-left: 10px;
+				vertical-align: middle;
+			}
+			.closeButton {
+				float: right;
+				cursor:pointer;
+				margin-right: 6px;
+				span{
+					vertical-align: middle;
+				}
+			}
+		}
+		.content {
+			display: block;
+		}
+		.bottom {}
 	}
-
 }
 
 
